--- a/index.html
+++ b/index.html
@@ -5,61 +5,107 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
     <title>AppLove</title>
+    <link rel="stylesheet" href="css/main.css">
   </head>
   <body>
     <header>
-      <div>
-        <a>Services</a>
-        <a>Work</a>
-        <a>The team</a>
+      <div class="header__navigation container">
+        <a class="text-uppercase">Services</a>
+        <a class="text-uppercase">Work</a>
+        <a class="text-uppercase">The team</a>
+        <img src="assets/images/logo.png" alt="" class="header__logo">
       </div>
     </header>
-    <section>
-      <div>
-        <h2>you just found an untilmate</h2>
-        <h1>We are applove from heart</h1>
-        <p>handcrafted - modern design - pixel perfect - passioned design</p>
-        <a>View services</a>
+    <section class="section__header background-image">
+      <div class="container">
+        <h2 class="section__subtitle text-uppercase">you just found an untilmate</h2>
+        <h1 class="section__title mb-0 text-uppercase">We are applove from heart</h1>
+        <p class="text-uppercase">handcrafted - modern design - pixel perfect - passioned design</p>
+        <div class="header__button--green">
+          <a>View services</a>
+        </div>
       </div>
     </section>
-    <section>
-      <div>
-        <h2>Services</h2>
+    <section class="section__services">
+      <div class=" container background-image">
+        <h2 class="section__subtitle text-uppercase">Services</h2>
         <h4>
           Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididuntut,<br>
           magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris.
         </h4>
-        <div>
-          <h5>user interface design</h5>
-          <h6>Wireframing</h6>
-          <h6>Prototyping</h6>
-          <h6>Usability testing</h6>
+        <div class="services__product first-image">
+          <img src="assets/images/services-1.png" alt="">
+          <h5 class="mb-0 text-uppercase">user interface design</h5>
+          <h6 class="mt-0 mb-0">Wireframing</h6>
+          <h6 class="mt-0 mb-0">Prototyping</h6>
+          <h6 class="mt-0 mb-0">Usability testing</h6>
         </div>
-        <div>
-          <h5>concept and ideas</h5>
-          <h6>Conceptualization</h6>
-          <h6>Digital Branding</h6>
-          <h6>Product Strategy</h6>
+        <div class="services__product second-image">
+          <img src="assets/images/services-2.png" alt="">
+          <h5 class="mb-0 text-uppercase">concept and ideas</h5>
+          <h6 class="mt-0 mb-0">Conceptualization</h6>
+          <h6 class="mt-0 mb-0">Digital Branding</h6>
+          <h6 class="mt-0 mb-0">Product Strategy</h6>
         </div>
-        <div>
-          <h5>desing and branding</h5>
-          <h6>Interaction Design</h6>
-          <h6>Graphic Design</h6>
-          <h6>Identity Design</h6>
+        <div class="services__product third-image">
+          <img src="assets/images/services-3.png" alt="">
+          <h5 class="mb-0 text-uppercase">desing and branding</h5>
+          <h6 class="mt-0 mb-0">Interaction Design</h6>
+          <h6 class="mt-0 mb-0">Graphic Design</h6>
+          <h6 class="mt-0 mb-0">Identity Design</h6>
         </div>
       </div>
     </section>
     <section>
-      <div>
-        <h2>work</h2>
+      <div class="section__work container">
+        <h2 class="section__subtitle">work</h2>
         <h4>
           Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididuntut,<br>
           magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris.
         </h4>
+        <img src="assets/images/hero.png" alt="" class="background-image">
+        <div class="work__products">
+          <div class="product">
+            <img src="assets/images/work-1.jpg" alt="">
+            <p class="text-uppercase">NOMBRE DEL PROYECTO</p>
+          </div>
+          <div class="product">
+            <img src="assets/images/work-2.jpg" alt="">
+            <p class="text-uppercase">NOMBRE DEL PROYECTO</p>
+          </div>
+          <div class="product">
+            <img src="assets/images/work-3.jpg" alt="">
+            <p class="text-uppercase">NOMBRE DEL PROYECTO</p>
+          </div>
+          <div class="product">
+            <img src="assets/images/work-4.jpg" alt="">
+            <p class="text-uppercase">NOMBRE DEL PROYECTO</p>
+          </div>
+          <div class="product">
+            <img src="assets/images/work-5.jpg" alt="">
+            <p class="text-uppercase">NOMBRE DEL PROYECTO</p>
+          </div>
+          <div class="product">
+            <img src="assets/images/work-6.jpg" alt="">
+            <p class="text-uppercase">NOMBRE DEL PROYECTO</p>
+          </div>
+          <div class="product">
+            <img src="assets/images/work-7.jpg" alt="">
+            <p class="text-uppercase">NOMBRE DEL PROYECTO</p>
+          </div>
+          <div class="product">
+            <img src="assets/images/work-8.jpg" alt="">
+            <p class="text-uppercase">NOMBRE DEL PROYECTO</p>
+          </div>
+          <div class="product">
+            <img src="assets/images/work-9.jpg" alt="">
+            <p class="text-uppercase">NOMBRE DEL PROYECTO</p>
+          </div>
+        </div>
       </div>
     </section>
     <footer>
-      <p>&#169; Copyright</p>
+      <p class="m-0">&#169; Copyright</p>
     </footer>
   </body>
 </html>
